--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Malmö Pizza Legacy</title>
 </head>
 <body>
-    <h1>PizzaLegacy</h1>
-    <p>Hellow World</p>
+    <header class="yellow-header">
+        <nav>
+            <ul>
+                <li><a href="info.html">Info</a></li>
+                <li><a href="tidigare.html">Tidigare Tillfällen</a></li>
+                <li><a href="reg.html">Anmälan</a></li>
+                <li><a href="merc.html">Merc</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="image-container">
+            <a href="https://www.pizzalegacy.com/" target="_blank">
+                <img src='https://www.pizzalegacy.com/PizzaLogo.png' alt="First Image">
+            </a>
+        </div>
+    </main>
+
+
 </body>
 </html>
