--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="info.html">Info</a></li>
-                <li><a href="tidigare.html">Tidigare Tillfällen</a></li>
+                <li><a href="tidigare.html">Vinnare</a></li>
                 <li><a href="reg.html">Anmälan</a></li>
                 <li><a href="merc.html">Merc</a></li>
             </ul>
@@ -19,10 +19,8 @@
     </header>
 
     <main>
-        <div class="image-container">
-            <a href="https://www.pizzalegacy.com/" target="_blank">
-                <img src='https://www.pizzalegacy.com/PizzaLogo.png' alt="First Image">
-            </a>
+        <div class="image-container">                                
+            <img src='https://www.pizzalegacy.com/PizzaLogo.png' alt="First Image">
         </div>
     </main>
 
