--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header class="yellow-header">
         <nav>
             <ul>
-                <li><a href="info.html">Info</a></li>
-                <li><a href="tidigare.html">Vinnare</a></li>
-                <li><a href="reg.html">Anmälan</a></li>
-                <li><a href="merc.html">Merc</a></li>
+                <li><a href="#" onclick="loadPage('info.html')">Info</a></li>
+                <li><a href="#" onclick="loadPage('tidigare.html')">Vinnare</a></li>
+                <li><a href="#" onclick="loadPage('reg.html')">reg.html</a></li>
+                <li><a href="#" onclick="loadPage('merc.html')">merc.html</a></li>
             </ul>
         </nav>
     </header>
@@ -24,6 +24,19 @@
         </div>
     </main>
 
+    <div id="content">
+        <!-- The content of the selected page will be loaded here -->
+    </div>
 
+    <script>
+        function loadPage(page) {
+            // Use fetch to load the content of the selected page
+            fetch(page)
+                .then(response => response.text())
+                .then(content => {
+                    document.getElementById('content').innerHTML = content;
+                });
+        }
+    </script>
 </body>
 </html>
