--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <header class="yellow-header">
         <nav>
+            <!-- Image for the landing page, linked to the landing page -->
+            <a href="start.html">
+                <img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="Landing Page" height="50">
+            </a>
+
+
             <ul>
                 <li><a href="#" onclick="loadPage('info.html')">Info</a></li>
                 <li><a href="#" onclick="loadPage('tidigare.html')">Vinnare</a></li>
-                <li><a href="#" onclick="loadPage('reg.html')">reg.html</a></li>
-                <li><a href="#" onclick="loadPage('merc.html')">merc.html</a></li>
+                <li><a href="#" onclick="loadPage('reg.html')">Anmälan</a></li>
+                <li><a href="#" onclick="loadPage('merc.html')">Merc</a></li>
             </ul>
         </nav>
     </header>
-
-    <main>
-        <div class="image-container">                                
-            <img src='https://www.pizzalegacy.com/PizzaLogo.png' alt="First Image">
-        </div>
-    </main>
 
     <div id="content">
         <!-- The content of the selected page will be loaded here -->
