--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
     <header class="yellow-header">
         <nav>
             <!-- Image for the landing page, linked to the landing page -->
-            <a href="start.html">
-                <img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="Landing Page" height="50">
-            </a>
-
-
             <ul>
+                <li><a href="#"><img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="PizzaLogo" height="50"></a></li>
                 <li><a href="#" onclick="loadPage('info.html')">Info</a></li>
                 <li><a href="#" onclick="loadPage('tidigare.html')">Vinnare</a></li>
                 <li><a href="#" onclick="loadPage('reg.html')">Anmälan</a></li>
