--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- Image for the landing page, linked to the landing page -->
             <ul>
-                <li><a href="#"><img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="PizzaLogo" height="50"></a></li>
+                <li><a href="#"><img src="https://www.pizzalegacy.com/pizza.png" alt="Pizza" height="100"></a></li>
                 <li><a href="#" onclick="loadPage('info.html')">Info</a></li>
                 <li><a href="#" onclick="loadPage('tidigare.html')">Vinnare</a></li>
                 <li><a href="#" onclick="loadPage('reg.html')">Anmälan</a></li>
