--- a/tidigare.html
+++ b/tidigare.html
@@ -7,7 +7,59 @@
     <title>Tidigare Tävlingar</title>
 </head>
 <body>
-    <!-- Your page content goes here -->
-    <h1>Text: Tidigare Tävlingar</h1>
+    <h2>Tidigare Vinnare</h2>
+
+    <p>De första två tillfällen delades det varken ut Top 8 Promos eller Participation Promo. </p>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Datum</th>
+                <th>Vinnare Token</th>
+                <th>Top 8 Promo</th>
+                <th>Participation Promos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2022-09-24</td>
+                <td><img src="chris.png" alt="Vinnare"></td>
+                <td><img src="Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="Pizza MTG.png" alt="Image 3"></td>
+            </tr>
+            <tr>
+                <td>2023-01-07</td>
+                <td><img src="Gustav.jpg" alt="Vinnare"></td>
+                <td><img src="Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="Pizza MTG.png" alt="Image 3"></td>
+            </tr>
+            <tr>
+                <td>2023-03-18</td>
+                <td><img src="christian1.png" alt="Vinnare"></td>
+                <td><img src="Taiga.png" alt="top8"></td>
+                <td><img src="Lotus Petal.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-05-27</td>
+                <td><img src="christian2.png" alt="Vinnare"></td>
+                <td><img src="Tropical Island pizza.png" alt="top8"></td>
+                <td><img src="Swords to Plowshares pizza.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-09-09</td>
+                <td><img src="Victor.png" alt="Vinnare"></td>
+                <td><img src="UG_Final.png" alt="top8"></td>
+                <td><img src="Endurance fixed.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-12-09</td>
+                <td><img src="Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="KarakasV2.png" alt="top8"></td>
+                <td><img src="bowmastersv7.png" alt="Participation"></td>
+            </tr>
+
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 </body>
 </html>
