--- a/merc.html
+++ b/merc.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- Your page content goes here -->
-    <h1>Text: Merchandise</h1>
+    <h2>Merchandise</h2>
+
+    <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers, Sleeves och Playmats. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
 </body>
 </html>
