--- a/landing.html
+++ b/landing.html
@@ -7,6 +7,6 @@
     <title>Landing</title>
 </head>
 <body>
-    <img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="Landing" height="1000">
+    <img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="Landing" height="300" class="center">
 </body>
 </html>
