--- a/merc.html
+++ b/merc.html
@@ -10,6 +10,6 @@
     <!-- Your page content goes here -->
     <h2>Merchandise</h2>
 
-    <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers, Sleeves och Playmats. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
+    <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
 </body>
 </html>
