--- a/landing.html
+++ b/landing.html
@@ -9,12 +9,18 @@
 </head>
 <body>
 
-    <div>
-        <h2>Malmö Pizza Legacy</h2>
-        <p>En gång per kvartal går Sveriges trevligast MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
-    </div>
 
-    <img src="https://www.pizzalegacy.com/PizzaLogo.png" alt="Landing" height="300" class="center">
+    <div class="content-wrapper">
+        <div class="text-container">
+            <h2>Malmö Pizza Legacy</h2>
+            <p>En gång per kvartal går Sveriges trevligast MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
+
+            
+        </div>
+        <div class="image-container">
+            <img src="PizzaLogo.png" alt="Your Image">
+        </div>
+    </div>
 
     <!--
     <div>
