--- a/merc.html
+++ b/merc.html
@@ -7,9 +7,15 @@
     <title>Merchandise</title>
 </head>
 <body>
-    <!-- Your page content goes here -->
-    <h2>Merchandise</h2>
 
-    <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
+    <div class="content-wrapper">
+        <div class="text-container">
+            <h2>Merchandise</h2>
+            <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
+        </div>
+        <div class="image-container">
+            <img src="PizzaLogo.png" alt="Your Image">
+        </div>
+    </div>  
 </body>
 </html>
