--- a/reg.html
+++ b/reg.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <!-- Your page content goes here -->
-    <h2>Anmälan</h2>
 
-    <p>Det kostar 300 kr att vara med om du anmäler dig innan den 1 December, efter det kostar det 350 - allt går tillbaka i priser i form av kort som man kan picka ur en pärm full med godbitar.</p>
+    <div class="content-wrapper">
+        <div class="text-container">
+            <h2>Anmälan</h2>
+            <p>Det kostar 300 kr att vara med om du anmäler dig innan den 1 December, efter det kostar det 350 - allt går tillbaka i priser i form av kort som man kan picka ur en pärm full med godbitar.</p>
         
-    <p><b>Hur anmäler jag mig och betalar?</b></p>
-    <p> Man anmäler sig genom att Swisha till Peppe: 0736789724 och skriva ett mail (peter.floderus@gmail.com) eller sms.</p>
-    <p> Inga återbetalningar, regga dig snabbt då antalet platser är begränsat (max 32 pers!) Märk swishen med "turnering rex".</p>
+            <p><b>Hur anmäler jag mig och betalar?</b></p>
+            <p> Man anmäler sig genom att Swisha till Peppe: 0736789724 och skriva ett mail (peter.floderus@gmail.com) eller sms.</p>
+            <p> Inga återbetalningar, regga dig snabbt då antalet platser är begränsat (max 32 pers!) Märk swishen med "turnering rex".</p>
+        </div>
+        <div class="image-container">
+            <img src="PizzaLogo.png" alt="Your Image">
+        </div>
+    </div>
+
 </body>
 </html>
