--- a/tidigare.html
+++ b/tidigare.html
@@ -7,10 +7,15 @@
     <title>Tidigare Tävlingar</title>
 </head>
 <body>
-    <h2>Tidigare Vinnare</h2>
+    <div class="content-wrapper">
+        <div class="text-container">
+        <h2>Tidigare Vinnare</h2>
+        <p>De första två tillfällen delades det varken ut Top 8 Promos eller Participation Promo. </p>
+        </div>
+    </div>
 
-    <p>De första två tillfällen delades det varken ut Top 8 Promos eller Participation Promo. </p>
-    
+    <div class="content-wrapper">
+        <div class="text-container">
     <table>
         <thead>
             <tr>
@@ -61,5 +66,8 @@
             <!-- Add more rows as needed -->
         </tbody>
     </table>
+</div>
+</div>
+
 </body>
 </html>
