--- a/landing.html
+++ b/landing.html
@@ -15,7 +15,7 @@
             <h2>Malmö Pizza Legacy</h2>
             <p>En gång per kvartal går Sveriges trevligast MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
 
-            
+            <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>            
         </div>
         <div class="image-container">
             <img src="PizzaLogo.png" alt="Your Image">
