--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
     <div class="content-wrapper">
         <div class="text-container">
             <h2>Malmö Pizza Legacy</h2>
-            <p>En gång per kvartal går Sveriges trevligast MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
+            <p>En gång per kvartal går Sveriges trevligaste MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
 
             <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>            
         </div>
