--- a/merc.html
+++ b/merc.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
         <div class="text-container">
             <h2>Merchandise</h2>
-            <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på markanden kommer det dyka upp här!</p>
+            <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers, Playmats och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på marknaden kommer det dyka upp här!</p>
         </div>
         <div class="image-container">
             <img src="PizzaLogo.png" alt="Your Image">
