--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
         <div class="text-container">
             <h2>Årets sista Pizzamagic går av stapeln den 9 December!</h2>
-            <p>Trofen befinner sig för tillfället i Ängelholm, den har faktiskt inte varit i Malmö sedan Gustav tog hem det i Januari i år! Som vanligt så håller vi till på Pizzeria Rex i Malmö, de serverar öl och goda pizzor. Det kostar ingenting att abonnera deras lokal, de betraktar det som att de tar igen det på försäljningen. Så vi äter och dricker på plats.</p>
+            <p>Trofén befinner sig för tillfället i Ängelholm, den har faktiskt inte varit i Malmö sedan Gustav tog hem det i Januari i år! Som vanligt så håller vi till på Pizzeria Rex i Malmö, de serverar öl och goda pizzor. Det kostar ingenting att abonnera deras lokal, de betraktar det som att de tar igen det på försäljningen. Så vi äter och dricker på plats.</p>
             <p>Räkna med att det blir sent, jag fixar kul draft (Modern masters X, modern horizons etc) som vi kan ha som sidevent så att ingen ska känna sig uttråkad.</p>
             <p>För att så många som möjligt ska kunna spela i Malmö så är det full prox som gäller, så länge det är bra färgutskrifter. Vill du inte spela med dina dyrgripar är det bara att fixa det med en printer! Detta tillsammans med att vi inte betalar för lokalen innebär att alla avgifter går tillbaka i form av priser! Vi brukar ha staples från nyare set som man kan picka från, det finns något för alla!</p>
             
