Update project structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Malmö Pizza Legacy</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav>
             <!-- Image for the landing page, linked to the landing page -->
             <ul>
-                <li><a href="#" onclick="loadPage('landing.html')" class="active"><img src="https://www.pizzalegacy.com/banner.png" alt="PizzaBanner" class="logo" height="100"></a></li>
+                <li><a href="#" onclick="loadPage('landing.html')" class="active"><img src="images/banner.png" alt="PizzaBanner" class="logo" height="100"></a></li>
                 <li><a href="#" onclick="loadPage('info.html')">Info</a></li>
                 <li><a href="#" onclick="loadPage('tidigare.html')">Vinnare</a></li>
                 <li><a href="#" onclick="loadPage('reg.html')">Anmälan</a></li>
