--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Landing</title>
     
 </head>
@@ -18,7 +18,7 @@
             <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>            
         </div>
         <div class="image-container">
-            <img src="PizzaLogo.png" alt="Your Image">
+            <img src="images/PizzaLogo.png" alt="Your Image">
         </div>
     </div>
 
