--- a/merc.html
+++ b/merc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Merchandise</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <p>Det ryktas om att det finns Malmö Pizza Legacy Stickers, Playmats och Sleeves. Just nu enbart i begränsad upplaga. Om det kommer ut något på marknaden kommer det dyka upp här!</p>
         </div>
         <div class="image-container">
-            <img src="PizzaLogo.png" alt="Your Image">
+            <img src="images/PizzaLogo.png" alt="Your Image">
         </div>
     </div>  
 </body>
