--- a/reg.html
+++ b/reg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Anmälan</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             <p> Inga återbetalningar, regga dig snabbt då antalet platser är begränsat (max 32 pers!) Märk swishen med "turnering rex".</p>
         </div>
         <div class="image-container">
-            <img src="PizzaLogo.png" alt="Your Image">
+            <img src="images/PizzaLogo.png" alt="Your Image">
         </div>
     </div>
 
