--- a/tidigare.html
+++ b/tidigare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Tidigare Tävlingar</title>
 </head>
 <body>
@@ -28,39 +28,39 @@
         <tbody>
             <tr>
                 <td>2022-09-24</td>
-                <td><img src="chris.png" alt="Vinnare"></td>
-                <td><img src="Pizza MTG.png" alt="Image 2"></td>
-                <td><img src="Pizza MTG.png" alt="Image 3"></td>
+                <td><img src="images/chris.png" alt="Vinnare"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
             </tr>
             <tr>
                 <td>2023-01-07</td>
-                <td><img src="Gustav.jpg" alt="Vinnare"></td>
-                <td><img src="Pizza MTG.png" alt="Image 2"></td>
-                <td><img src="Pizza MTG.png" alt="Image 3"></td>
+                <td><img src="images/Gustav.jpg" alt="Vinnare"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
             </tr>
             <tr>
                 <td>2023-03-18</td>
-                <td><img src="christian1.png" alt="Vinnare"></td>
-                <td><img src="Taiga.png" alt="top8"></td>
-                <td><img src="Lotus Petal.png" alt="Participation"></td>
+                <td><img src="images/christian1.png" alt="Vinnare"></td>
+                <td><img src="images/Taiga.png" alt="top8"></td>
+                <td><img src="images/Lotus Petal.png" alt="Participation"></td>
             </tr>
             <tr>
                 <td>2023-05-27</td>
-                <td><img src="christian2.png" alt="Vinnare"></td>
-                <td><img src="Tropical Island pizza.png" alt="top8"></td>
-                <td><img src="Swords to Plowshares pizza.png" alt="Participation"></td>
+                <td><img src="images/christian2.png" alt="Vinnare"></td>
+                <td><img src="images/Tropical Island pizza.png" alt="top8"></td>
+                <td><img src="images/Swords to Plowshares pizza.png" alt="Participation"></td>
             </tr>
             <tr>
                 <td>2023-09-09</td>
-                <td><img src="Victor.png" alt="Vinnare"></td>
-                <td><img src="UG_Final.png" alt="top8"></td>
-                <td><img src="Endurance fixed.png" alt="Participation"></td>
+                <td><img src="images/Victor.png" alt="Vinnare"></td>
+                <td><img src="images/UG_Final.png" alt="top8"></td>
+                <td><img src="images/Endurance fixed.png" alt="Participation"></td>
             </tr>
             <tr>
                 <td>2023-12-09</td>
-                <td><img src="Pizza MTG.png" alt="Vinnare"></td>
-                <td><img src="KarakasV2.png" alt="top8"></td>
-                <td><img src="bowmastersv7.png" alt="Participation"></td>
+                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/KarakasV2.png" alt="top8"></td>
+                <td><img src="images/bowmastersv7.png" alt="Participation"></td>
             </tr>
 
             <!-- Add more rows as needed -->
