--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Information</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
             <p>Goyfen i pizzan!</p>
         </div>
         <div class="image-container">
-            <img src="PizzaLogo.png" alt="Your Image">
+            <img src="images/PizzaLogo.png" alt="Your Image">
         </div>
     </div>
 
