--- a/tidigare.html
+++ b/tidigare.html
@@ -58,9 +58,15 @@
             </tr>
             <tr>
                 <td>2023-12-09</td>
-                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/hampe.png" alt="Vinnare"></td>
                 <td><img src="images/KarakasV2.png" alt="top8"></td>
                 <td><img src="images/bowmastersv7.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2024-03-02</td>
+                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/DunkelRitual.png" alt="top8"></td>
+                <td><img src="images/wasteland.png" alt="Participation"></td>
             </tr>
 
             <!-- Add more rows as needed -->
