--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,7 @@
     <div class="content-wrapper">
         <div class="text-container">
             <h2>Malmö Pizza Legacy</h2>
+            <p><b>Är tillbaka den 2 Mars 2024</b></p>
             <p>En gång per kvartal går Sveriges trevligaste MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
 
             <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>            
