--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,8 @@
             <p><b>Är tillbaka den 2 Mars 2024</b></p>
             <p>En gång per kvartal går Sveriges trevligaste MTG Legacy turnering av stapeln på Pizzeria Rex i Malmö.</p>
 
-            <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>            
+            <p>Skicka frågor till <b>info@pizzalegacy.com</b></p>
+            <p><a href="https://twitter.com/MtgPizzaLegacy" class="twitter-follow-button" data-show-count="false">Follow @twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>     </p>      
         </div>
         <div class="image-container">
             <img src="images/PizzaLogo.png" alt="Your Image">
