--- a/tidigare.html
+++ b/tidigare.html
@@ -64,9 +64,15 @@
             </tr>
             <tr>
                 <td>2024-03-02</td>
-                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/Alex_token.png" alt="Vinnare"></td>
                 <td><img src="images/DunkelRitual.png" alt="top8"></td>
                 <td><img src="images/wasteland.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2024-06-02-08</td>
+                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/FOW_Matt.jpg" alt="top8"></td>
+                <td><img src="images/Grim_full_3.png" alt="Participation"></td>
             </tr>
 
             <!-- Add more rows as needed -->
