--- a/tidigare.html
+++ b/tidigare.html
@@ -69,10 +69,16 @@
                 <td><img src="images/wasteland.png" alt="Participation"></td>
             </tr>
             <tr>
-                <td>2024-06-02-08</td>
+                <td>2024-06-08</td>
                 <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
-                <td><img src="images/FOW_Matt.jpg" alt="top8"></td>
-                <td><img src="images/Grim_full_3.png" alt="Participation"></td>
+                <td><img src="images/Grim_full_3.png" alt="top8"></td>
+                <td><img src="images/FOW_Matt.jpg" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2024-09-28</td>
+                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/Pizza MTG.png" alt="top8"></td>
+                <td><img src="images/Pizza MTG.png" alt="Participation"></td>
             </tr>
 
             <!-- Add more rows as needed -->
