--- a/tidigare.html
+++ b/tidigare.html
@@ -27,40 +27,16 @@
         </thead>
         <tbody>
             <tr>
-                <td>2022-09-24</td>
-                <td><img src="images/chris.png" alt="Vinnare"></td>
-                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
-                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
+                <td>2024-09-28</td>
+                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/reanimate.png" alt="top8"></td>
+                <td><img src="images/brainstorm.png" alt="Participation"></td>
             </tr>
             <tr>
-                <td>2023-01-07</td>
-                <td><img src="images/Gustav.jpg" alt="Vinnare"></td>
-                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
-                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
-            </tr>
-            <tr>
-                <td>2023-03-18</td>
-                <td><img src="images/christian1.png" alt="Vinnare"></td>
-                <td><img src="images/Taiga.png" alt="top8"></td>
-                <td><img src="images/Lotus Petal.png" alt="Participation"></td>
-            </tr>
-            <tr>
-                <td>2023-05-27</td>
-                <td><img src="images/christian2.png" alt="Vinnare"></td>
-                <td><img src="images/Tropical Island pizza.png" alt="top8"></td>
-                <td><img src="images/Swords to Plowshares pizza.png" alt="Participation"></td>
-            </tr>
-            <tr>
-                <td>2023-09-09</td>
-                <td><img src="images/Victor.png" alt="Vinnare"></td>
-                <td><img src="images/UG_Final.png" alt="top8"></td>
-                <td><img src="images/Endurance fixed.png" alt="Participation"></td>
-            </tr>
-            <tr>
-                <td>2023-12-09</td>
-                <td><img src="images/hampe.png" alt="Vinnare"></td>
-                <td><img src="images/KarakasV2.png" alt="top8"></td>
-                <td><img src="images/bowmastersv7.png" alt="Participation"></td>
+                <td>2024-06-08</td>
+                <td><img src="images/anders.png" alt="Vinnare"></td>
+                <td><img src="images/Grim_full_3.png" alt="top8"></td>
+                <td><img src="images/FOW_Matt.jpg" alt="Participation"></td>
             </tr>
             <tr>
                 <td>2024-03-02</td>
@@ -69,16 +45,40 @@
                 <td><img src="images/wasteland.png" alt="Participation"></td>
             </tr>
             <tr>
-                <td>2024-06-08</td>
-                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
-                <td><img src="images/Grim_full_3.png" alt="top8"></td>
-                <td><img src="images/FOW_Matt.jpg" alt="Participation"></td>
+                <td>2023-12-09</td>
+                <td><img src="images/hampe.png" alt="Vinnare"></td>
+                <td><img src="images/KarakasV2.png" alt="top8"></td>
+                <td><img src="images/bowmastersv7.png" alt="Participation"></td>
             </tr>
             <tr>
-                <td>2024-09-28</td>
-                <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
-                <td><img src="images/Pizza MTG.png" alt="top8"></td>
-                <td><img src="images/Pizza MTG.png" alt="Participation"></td>
+                <td>2023-09-09</td>
+                <td><img src="images/Victor.png" alt="Vinnare"></td>
+                <td><img src="images/UG_Final.png" alt="top8"></td>
+                <td><img src="images/Endurance fixed.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-05-27</td>
+                <td><img src="images/christian2.png" alt="Vinnare"></td>
+                <td><img src="images/Tropical Island pizza.png" alt="top8"></td>
+                <td><img src="images/Swords to Plowshares pizza.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-03-18</td>
+                <td><img src="images/christian1.png" alt="Vinnare"></td>
+                <td><img src="images/Taiga.png" alt="top8"></td>
+                <td><img src="images/Lotus Petal.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2023-01-07</td>
+                <td><img src="images/Gustav.jpg" alt="Vinnare"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
+            </tr>
+            <tr>
+                <td>2022-09-24</td>
+                <td><img src="images/chris.png" alt="Vinnare"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 2"></td>
+                <td><img src="images/Pizza MTG.png" alt="Image 3"></td>
             </tr>
 
             <!-- Add more rows as needed -->
