--- a/tidigare.html
+++ b/tidigare.html
@@ -27,8 +27,14 @@
         </thead>
         <tbody>
             <tr>
-                <td>2024-09-28</td>
+                <td>2025-01-11</td>
                 <td><img src="images/Pizza MTG.png" alt="Vinnare"></td>
+                <td><img src="images/LED.png" alt="top8"></td>
+                <td><img src="images/consign.png" alt="Participation"></td>
+            </tr>
+            <tr>
+                <td>2024-09-28</td>
+                <td><img src="images/Gottfrid.png" alt="Vinnare"></td>
                 <td><img src="images/reanimate.png" alt="top8"></td>
                 <td><img src="images/brainstorm.png" alt="Participation"></td>
             </tr>
