--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Social Links -->
         <div class="social-links">
             <a href="mailto:info@pizzalegacy.com" class="social-link">📧 Email</a>
-            <a href="https://twitter.com/pizzalegacy" target="_blank" class="social-link">🐦 Twitter</a>
+            <a href="https://x.com/MtgPizzaLegacy" target="_blank" class="social-link">🐦 Twitter</a>
             <a href="https://discord.gg/yourserver" target="_blank" class="social-link">💬 Discord</a>
         </div>
     </section>
