--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="social-links">
             <a href="mailto:info@pizzalegacy.com" class="social-link">📧 Email</a>
             <a href="https://x.com/MtgPizzaLegacy" target="_blank" class="social-link">🐦 Twitter</a>
-            <a href="https://discord.gg/yourserver" target="_blank" class="social-link">💬 Discord</a>
+            <a href="https://discord.gg/awSC3a8f3S" target="_blank" class="social-link">💬 Discord</a>
         </div>
     </section>
 
